find the flare gun

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-I'm so stuck, there are no words
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Help Request</title>
+</head>
+
+<body>
+	<p>I'm stuck because my Phaser game screen dimensions are wrong. The game window should scale to fill the browser window. <a href="phaserPixels/help_request.html"</a>Details</a> <a href="phaserPixels/index.html">Example</a></p>
+	<hr/>
+    <p>I am <a href="https://www.youtube.com/watch?v=YgSPaXgAdzE">stuck</a> and wish I was <a href="https://www.youtube.com/watch?v=NYdR1G1MRbw">in the zone</a>.</p>
+</body>
+
+</html>
