--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
 	<p>I'm stuck because my Phaser game screen dimensions are wrong. The game window should scale to fill the browser window. <a href="phaserPixels/help_request.html"</a>Details</a> <a href="phaserPixels/index.html">Example</a></p>
+<p><a href="https://phaser.discourse.group/t/how-many-pixels-wondering-about-target-resolution/4456/14">Solved!</a>
 	<hr/>
     <p>I am <a href="https://www.youtube.com/watch?v=YgSPaXgAdzE">stuck</a> and wish I was <a href="https://www.youtube.com/watch?v=NYdR1G1MRbw">in the zone</a>.</p>
 </body>
